# smartpool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  code_quality.yml  pylint.yml  pytest.yml  security.yml
docs/: Makefile  architecture_doc_en.md  architecture_doc_fr.md  changelog.rst  conf.py  config_tuning_guide_en.md  config_tuning_guide_fr.md  exceptions_guide.md  exceptions_guide_fr.md  factory_guide_en.md  factory_guide_fr.md  index.rst  license.rst  monitoring_cost_model.md  monitoring_guide_en.md  monitoring_guide_fr.md  smartpool_conventions_guide.md  troubleshooting_guide_en.md  troubleshooting_guide_fr.md
docs/_static/: custom.css
docs/api/: config.rst  core.rst  exceptions.rst
docs/developer_guide/: architecture.rst  extending.rst  factory_guide.rst
docs/examples/: advanced_patterns.rst  basic_usage.rst  factories.rst  integrations.rst
docs/tools/: benchmarks.rst  scripts.rst  testing.rst
docs/user_guide/: configuration.rst  installation.rst  quickstart.rst
examples/: __init__.py  example_01_basic_bytesio.py  example_02_pil_images.py  example_03_database_pool.py  example_04_numpy_arrays.py  example_05_advanced_features.py  example_06_custom_factory.py  example_07_main_web_server.py  example_07_web_client_tester.py  example_07_web_integration.py  example_07_web_integration2.py  example_08_advanced_patterns.py  example_09_debugging_troubleshooting.py  example_10_complete_integration.py  example_11_metrics_modes.py  example_index_guide.md  example_index_guide_fr.md
examples/factories/: __init__.py
examples/factories/basic/: __init__.py  bytesio_factory.py  metadata_factory.py  query_result_factory.py
examples/factories/database/: __init__.py  sqlalchemy_session_factory.py
examples/factories/imaging/: __init__.py  pil_image_factory.py  pil_thumbnail_factory.py
examples/factories/qt/: __init__.py  qpixmap_factory.py  qt_thumbnail_factory.py
examples/factories/scientific/: __init__.py  numpyarray_factory.py
scripts/: build_docs.sh  build_wheel.sh  run_benchmarks_tests.sh  run_examples_tests.sh  run_formatters.sh  run_integration_tests.sh  run_src_unit_tests.sh
src/smartpool/: __init__.py  config.py
src/smartpool/core/: data_models.py  factory_interface.py  smartpool_manager.py  utils.py
src/smartpool/core/exceptions/: __init__.py  base_error.py  configuration_error.py  factory_creating_exceptions_context.py  factory_error.py  lifecycle_error.py  management_utils.py  operation_error.py  performance_error.py  resource_error.py
src/smartpool/core/managers/: __init__.py  active_objects_manager.py  background_manager.py  memory_manager.py  memory_optimizer.py  pool_operations_manager.py
src/smartpool/core/metrics/: __init__.py  metrics_dispatcher.py  performance_metrics.py  thread_safe_stats.py
tests/: conftest.py  testing_utils.py
tests/integration/: test_advanced_configuration.py  test_concurrent_integration.py  test_error_recovery.py  test_exception_management_coverage.py  test_memory_edge_cases.py  test_memory_specific_coverage.py  test_metrics_async_integration.py  test_multiple_factories.py  test_resource_error_coverage.py  test_shutdown_lifecycle.py  test_smartpool_integration.py
tests/performance/: test_smartpool_auto_tuning_performance.py  test_smartpool_performance.py
tests/unit/core/tests/core/: test_config.py  test_factory_interface.py  test_smartpool_manager.py  test_utils.py
tests/unit/core/tests/core/exceptions/: test_base_error.py  test_configuration_error.py  test_factory_creating_exceptions_context.py  test_factory_error.py  test_lifecycle_error.py  test_management_utils.py  test_operation_error.py  test_performance_error.py  test_resource_error.py
tests/unit/core/tests/core/managers/: test_active_objects_manager.py  test_background_manager.py  test_memory_manager.py  test_memory_optimizer.py  test_pool_operations_manager.py
tests/unit/core/tests/core/metrics/: test_metrics_dispatcher.py  test_performance_metrics.py  test_thread_safe_stats.py
tests/unit/examples/tests/examples/factories/: base_thumbnail_test.py  test_bytesio_factory.py  test_metadata_factory.py  test_numpyarray_factory.py  test_pil_image_factory.py  test_pil_thumbnail_factory.py  test_qpixmap_factory.py  test_qt_thumbnail_factory.py  test_query_result_factory.py  test_sqlalchemy_session_factory.py
