[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "smartpool"
version = "1.1.1"
description = "A highly modular and extensible generic memory pool for efficient object reuse"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arioch", email = "arioch31@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["memory", "pool", "cache", "object-reuse", "performance"]
requires-python = ">=3.11"

# Core dependencies (none!)
dependencies = []

[project.optional-dependencies]
# Image factories
imaging = [
    "Pillow>=9.0.0",
]

# PyQt factories
qt = [
    "PyQt6>=6.0.0",
]

# Scientific factories
scientific = [
    "numpy>=1.20.0",
]

# Database factories
database = [
    "SQLAlchemy>=1.4.0",
]

# All extensions
all = [
    "Pillow>=9.0.0",
    "PyQt6>=6.0.0",
    "numpy>=1.20.0",
    "SQLAlchemy>=1.4.0",
    "uvicorn>=0.33.0",
    "fastapi>=0.116.1",
    "Flask>=3.0.0",
    "psutil>=7.0.0",
    "requests>=2.0.0",
    "python-multipart>=0.0.20",
]

security = [
    "ruff>=0.11.0",
    "pip_audit>=2.9.0",
]

quality = [
    "pre-commit>=3.0.0",
    "commitizen>=3.0.0",
]

dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.11.0",
    "mypy>=0.950",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "pre-commit>=3.0.0",
]

# Dependencies for examples
examples = [
    "uvicorn>=0.33.0",
    "fastapi>=0.116.1",
    "Flask>=3.0.0",
    "numpy>=1.20.0",
    "SQLAlchemy>=1.4.0",
    "Pillow>=9.0.0",
    "psutil>=7.0.0",
    "requests>=2.0.0",
    "python-multipart>=0.0.20",
    "PyQt6>=6.0.0"
    ]

[project.urls]
Homepage = "https://github.com/arioch3131/smartpool"
Repository = "https://github.com/arioch3131/smartpool.git"
Issues = "https://github.com/arioch3131/smartpool/issues"
Changelog = "https://github.com/arioch3131/smartpool/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/arioch3131/smartpool/issues"
Funding = "https://github.com/sponsors/arioch3131"

[tool.hatch.build.targets.wheel]
packages = ["src/smartpool"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "PL",  # pylint
    "S",   # bandit-like security checks
]
ignore = [
    "E203", # black-compatible slice spacing
    "PLR2004", # magic-value comparisons are common in thresholds/tests
    "S101", # assert used
    "S110", # allow broad fallback except-pass patterns used in utility code
    "S311", # pseudo-random generators for non-crypto use
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["smartpool"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
    "--cov=src",
    "-v",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

# Configuration coverage
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
